# ray-tracer-challenge

./: CMakeLists.txt  run.bat
src/: main.cpp
src/tuple/: tuple.cpp  tuple.h
